fixed actions menu icons alignment

--- a/src/app/pages/home/home.component.sass
+++ b/src/app/pages/home/home.component.sass
@@ -254,7 +254,7 @@
   padding: .25rem 1rem .25rem .25rem
 
 .actions-menu-icon
-  min-width: 1rem
+  min-width: 1.125rem
   display: inline-block
   text-align: center
 
